[package]
name = "egor-govno-video"
version = "0.1.0"
edition = "2021"

[dependencies]

# Асинхронный HTTP клиент для Rust, который использует библиотеку Tokio для обработки асинхронных операций.
# Он поддерживает различные функции, включая работу с JSON, что позволяет легко отправлять и получать данные в этом формате.
# В данной версии включена поддержка JSON через указание соответствующего флага в features.
reqwest = { version = "0.12.8", features = ["json"] }

# Библиотека для работы с JSON в Rust, основанная на системе сериализации и десериализации Serde.
# Она позволяет преобразовывать структуры данных Rust в JSON и обратно, поддерживая как типизированные, так и нетипизированные данные.
# Версия 1.0.128 включает оптимизации производительности,
# такие как улучшение парсинга строк с использованием SIMD, что значительно увеличивает скорость обработки больших JSON файлов
serde_json = "1.0.128"

# Библиотека для создания ботов Telegram на языке Rust.
# Она предоставляет удобный интерфейс для взаимодействия с API Telegram и включает макросы для упрощения разработки.
# В данной версии активированы макросы, что позволяет использовать более лаконичный и выразительный синтаксис при написании кода.
teloxide = { version = "0.13.0", features = ["macros"] }

# Асинхронная библиотека для Rust, которая предоставляет инструменты для написания высокопроизводительных сетевых приложений.
# Она поддерживает множество функций, включая таймеры, задачи и работу с сокетами.
# В этой версии включены все функции библиотеки (full), что обеспечивает максимальную гибкость и возможности для разработчиков при создании асинхронных приложений.
tokio = { version = "1.40.0", features = ["full"] }
